--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,20 @@
   "dependencies": {
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0",
-    "scripts": {
-      "client": " yarn --cwd client run start ",
-      "server": "node index",
-      "start": "concurretly \"yarn run server\" \"yarn run client""
-    }
+    "helmet": "^7.1.0",
+    "nodemon": "^3.1.0"
+  },
+  "scripts": {
+    "build": "tsc --project ./",
+    "start": "nodemon src/index.ts"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
